# Dataclaw23

./: STRATEGY_REPORT.md  SYSTEM_ARCHITECTURE_AND_RUST_PLAN.md  fix-colors.js  fix-rgba.js  metadata.json  package-lock.json  package.json  server.ts
dataclaw/: .env.example  package-lock.json  package.json  server.ts
dataclaw/dataclaw_core/agents/: betafish.py  mirofish.py
dataclaw/src/: App.tsx
dataclaw/src/components/: AdminPanel.tsx  ControlPlane.tsx  PortfolioPanel.tsx  SignalEngine.tsx
dataclaw/src/state/: persistentStore.ts
dataclaw_core/agents/: swarm.py
dataclaw_core/super_core/: swarm_orchestrator.py
dataclaw_rs/: Cargo.toml  Dockerfile  docker-compose.yml  vps_deploy.sh
dataclaw_rs/src/: main.rs
dataclaw_rs/src/agents/: config.rs  executor.rs  mod.rs  swarm.rs
dataclaw_rs/src/api/: routes.rs
dataclaw_rs/src/db/: mod.rs  supabase.rs
dataclaw_rs/src/exchanges/: mod.rs  router.rs
indicators-rs/: Cargo.toml
indicators-rs/src/: adx.rs  atr.rs  bb_squeeze.rs  bollinger.rs  ema.rs  lib.rs  macd.rs  rsi.rs  sma.rs  vwap.rs
src/: App.tsx  index.css
src/components/: AdminPanel.tsx  AgentOperatingDesk.tsx  AgentPanel.tsx  AgentsPanel.tsx  ControlPlane.tsx  CouncilPanel.tsx  ExecutionBridge.tsx  NotificationCopilot.tsx  PortfolioPanel.tsx  QuantDashboard.tsx  SignalEngine.tsx  StreamingDashboard.tsx  WatchlistPanel.tsx  ui.tsx
src/components/layout/: BottomNav.tsx  EnterpriseHeader.tsx  Sidebar.tsx
src/hooks/: useMultiplexTicker.ts  useRealtimeMarket.ts
src/services/: executionBridge.ts  metrics.ts
src/state/: persistentStore.ts
(+2 files in other folders)
