[package]
name = "dataclaw_rs"
version = "0.1.0"
edition = "2021"
description = "High-Frequency Agentic Trading OS Backend"

[dependencies]
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
